--- a/Strict INN Validation with a Prefix/Strict INN Validation with a Prefix.csproj
+++ b/Strict INN Validation with a Prefix/Strict INN Validation with a Prefix.csproj
@@ -43,8 +43,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Formatting\FirstNameFormatter.cs" />
+    <Compile Include="Formatting\Formatter.cs" />
+    <Compile Include="Formatting\FormatterFactory.cs" />
+    <Compile Include="IdentityData.cs" />
+    <Compile Include="Formatting\Interfaces\IFormatter.cs" />
+    <Compile Include="IInfoFetcher.cs" />
+    <Compile Include="InfoFetcher.cs" />
+    <Compile Include="Validatting\Interfaces\IValidator.cs" />
+    <Compile Include="Formatting\LastNameFormatter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validatting\TaxIDValidator.cs" />
+    <Compile Include="Validatting\Validator.cs" />
+    <Compile Include="Validatting\ValidatorFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
